--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
-version: 1.0.{build}
+version: 1.1.{build}
 pull_requests:
   do_not_increment_build_number: true
 image: Visual Studio 2019
 configuration: Release
 dotnet_csproj:
   patch: true
-  file: '**\*.csproj'
+  file: ./src/HGV.Divine.csproj
   version: '{version}'
   version_prefix: '{version}'
   package_version: '{version}'
@@ -15,7 +15,7 @@ dotnet_csproj:
 before_build:
 - cmd: nuget restore ./HGV.Divine.sln
 build:
-  project: /HGV.Divine.sln
+  project: ./HGV.Divine.sln
   publish_nuget: true
   verbosity: minimal
 deploy:
